<resources>
    <string name="app_name">PDQBook</string>

    <!-- welcome page -->
    <string name="enter_now">立即进入</string>

    <!-- main page -->
    <string name="main_page_title">PDQ 最权威的癌症信息库</string>
    <string name="main_page_title_sub">国家癌症中心 - National Cancer Center</string>
    <string name="main_page_search_hint_text">癌症专业词典、癌症药典查询</string>
    <string name="about_pdq">关于PDQ ></string>
    <string name="prevention">预防</string>
    <string name="screening">筛查</string>
    <string name="treatment">治疗</string>
    <string name="shidaoai">食道癌（专业版）</string>
    <string name="ruxianai">乳腺癌（专业版）</string>
    <string name="ganai">肝癌（专业版）</string>
    <string name="zhichangai">直肠癌（专业版）</string>
    <string name="feiai">肺癌（专业版）</string>
    <string name="weiai">胃癌（专业版）</string>
    <string name="naoai">脑癌（专业版）</string>
    <string name="risk_inspection">风险测评</string>
    <string name="search">查询</string>
    <string name="done">完成</string>
    <string name="search_result">查询结果</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pdq">PDQActivity</string>

    <!-- search page -->
    <string name="search_hint">请输入查询内容</string>
    <string name="search_error">查询失败</string>

    <!-- risk result -->
    <string name="risk_result">风险监测结果</string>
    <string name="risk_result_sub_title">美国哈弗研究院</string>

    <string name="risk_0_2">极低致癌风险</string>
    <string name="risk_2_4">较低致癌风险</string>
    <string name="risk_4_6">较高致癌风险</string>
    <string name="risk_6_8">高致癌风险</string>
    <string name="risk_8_10">极高致癌风险</string>

    <string name="advise_0_2">建议预约体检筛查</string>
    <string name="advise_2_4">建议预约体检筛查</string>
    <string name="advise_4_6">建议预约体检筛查</string>
    <string name="advise_6_8">建议预约体检筛查</string>
    <string name="advise_8_10">建议预约体检筛查</string>

    <string name="feiai_warning">肺癌是发病率和死亡率增长最快，对人群健康和生命威胁最大的恶性肿瘤之一。</string>

    <string name="more_feiai_info">更多癌症筛查、预防和治疗信息 >></string>
    <string name="realize_health_examination">了解体检筛查</string>
    <string name="order_health_examination">预约体检筛查</string>

    <!-- pdq about -->
    <string name="pdq_about">关于PDQ</string>
    <string name="pdq_about_detail">       PDQ癌症综合信息库自1977年由美国国家癌症研究所（NCI）创建，内容涵盖了癌症筛查、预防、诊断、治疗、支持与姑息治疗、补充和替代疗法、遗传学和药物等方面。该信息库定期对全世界癌症研究结果进行汇总，及时更新相关内容，为癌症预防、诊断和治疗提供最新信息。</string>
    <string name="copyright">Copyright © 2016 PDQ. All rights reserved.</string>

    <!-- 文章详情 -->
    <string name="switch_lang_description">切换语言</string>
</resources>
