<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/about_pdq_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@mipmap/about_pdq" />

    <TextView
        android:id="@+id/pdq_about_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_pdq_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/pdq_about"
        android:textSize="22dp" />


    <TextView
        android:id="@+id/about_pdq_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pdq_about_title"
        android:layout_margin="25dp"
        android:textSize="18dp"
        android:text="@string/pdq_about_detail"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"/>
</RelativeLayout>