<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/main_bg"
    tools:context="com.wehealth.pdqbook.fragment.MainFragment">

    <com.wehealth.pdqbook.view.CircleLayout
        android:id="@+id/mainpage_circlelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/mainpage_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/main_page_title"
        android:textColor="@color/color_navy"
        android:textSize="@dimen/main_page_title_size" />

    <TextView
        android:id="@+id/mainpage_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainpage_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/main_page_title_sub"
        android:textColor="@color/color_navy"
        android:textSize="@dimen/main_page_title_sub_size" />

    <RelativeLayout
        android:id="@+id/mainpage_search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainpage_circlelayout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@mipmap/search_bg"
        android:padding="10dp">

        <ImageView
            android:id="@+id/cancer_btn_lay_search_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:clickable="false"
            android:src="@mipmap/search" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/cancer_btn_lay_search_icon"
            android:clickable="false"
            android:text="@string/main_page_search_hint_text"
            android:textColor="@color/color_text_navy"
            android:textSize="16dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mainpage_about_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/about_pdq_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:src="@mipmap/xiaotubiao_03" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/about_pdq_icon"
            android:clickable="false"
            android:text="@string/about_pdq" />
    </RelativeLayout>
</RelativeLayout>
